--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,6 +11,25 @@ jobs:
           java-version: '11' # The JDK version to make available on the path.
           java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
           architecture: x64 # (x64 or x86) - defaults to x64
+#
+#      - name: run code quality checks
+#        run:
+#
+#      - name: run tests
+#        run:
 
       - name: build with gradle
         run: ./gradlew clean bootJar
+
+      - name: upload artifact
+        uses: actions/upload-artifact@v2
+          name: bigly-producer
+          path: build/libs/bigly-producer*.jar
+
+#      - name: build docker image
+#        run: ./gradlew clean bootBuildImage
+#
+#      - name: upload docker image
+#        run:
+#
+#      - name: deploy docker image
