--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: get image version
         id: image_version_step
-        run: echo '::set-output name=ARTIFACT_VERSION::$(./gradlew properties | grep version | awk \'{print $2}\')'
+        run: echo "::set-output name=ARTIFACT_VERSION::$(./gradlew properties | grep version | awk '{print $2}')"
 
       - name: debug
         run: echo '${{ steps.image_version_step.outputs.ARTIFACT_VERSION }}'
