--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -13,6 +13,8 @@ jobs:
           architecture: x64 # (x64 or x86) - defaults to x64
 #
       - name: run code quality checks
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: ./gradlew clean sonarqube -i
 #
       - name: run tests
