--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,7 @@ sonarqube {
 	properties {
 //		property "sonar.login", System.getenv("BIGLY_SONARCLOUD_TOKEN")
 		property "sonar.projectKey", "General-Meow_bigly-producer"
-		property "sonar.orgnization", "general-meow"
+		property "sonar.organization", "general-meow"
 		property "sonar.host.url", "https://sonarcloud.io"
 		property "sonar.exclusions", "src/main/java/com/paulhoang/biglyproducer/data"
 		property "sonar.coverage.exclusions", "**/com/paulhoang/biglyproducer/data/*,src/main/java/com/paulhoang/biglyproducer/BiglyProducerApplication.java"
