--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,14 +11,14 @@ jobs:
           java-version: '11' # The JDK version to make available on the path.
           java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
           architecture: x64 # (x64 or x86) - defaults to x64
-#
+
+      - name: run tests
+        run: ./gradlew clean test -i
+
       - name: run code quality checks
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew clean sonarqube -i
-#
-      - name: run tests
-        run: ./gradlew clean test -i
+        run: ./gradlew clean test sonarqube -i
 
       - name: build with gradle
         run: ./gradlew clean bootJar
