--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,7 +1,7 @@
 name: cicd
 on: [push]
 jobs:
-  code-quality:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -15,12 +15,27 @@ jobs:
       - name: run tests
         run: ./gradlew clean test -i
 
+  code-quality:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '11' # The JDK version to make available on the path.
+          java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
+          architecture: x64 # (x64 or x86) - defaults to x64
+
       - name: run code quality checks
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew clean test sonarqube -i
+        run: ./gradlew sonarqube -i
 
+  package:
+    runs-on: ubuntu-latest
+    needs: [code-quality, tests]
+    steps:
       - name: build with gradle
         run: ./gradlew clean bootJar
 
