--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -62,6 +62,13 @@ jobs:
           ./gradlew clean bootBuildImage --imageName=generalmeow/bigly-producer
           docker tag generalmeow/bigly-producer:latest generalmeow/bigly-producer:${{ steps.image_version_step.outputs.ARTIFACT_VERSION }}
 
+      - name: scan
+        uses: anchore/scan-action@v2
+        with:
+          image: "generalmeow/bigly-producer:latest"
+          fail-build: true
+          severity-cutoff: critical
+
       - name: docker login
         uses: docker/login-action@v1
         with:
